Two classes added, CoOrd and ThirdDemension which have extends from CoOrd.

--- a/HelloWorld.csproj
+++ b/HelloWorld.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ThirdDemension.cs" />
     <Compile Include="ClassTwo.cs" />
+    <Compile Include="CoOrd.cs" />
     <Compile Include="MyClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
